[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdnl_extract"
version = "0.4"
authors = [
  { name="Noah Capp", email="noahmcapp@gmail.com" },
]
description = "PDNL Extract"
dependencies = [
	"geojson",
	"pdnl_sana",
	"phas",
	"tqdm",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[project.urls]
Homepage = "https://github.com/PennCompPathology/pdnl_extract"

[project.scripts]
pdnl_extract = "pdnl_extract:main"
